--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-body {
+*
+{
+  box-sizing: border-box;
+}
+
+body 
+{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +17,8 @@ body {
   color: darkcyan;
 }
 
-.container {
+.container 
+{
   text-align: center;
   background: rgba(255,255,255,0.3);
   padding: 20px;
@@ -25,11 +32,13 @@ body {
   align-items: center;
 }
 
-.heading {
+.heading 
+{
   font-size: 32px;
 }
 
-.temp-container {
+.temp-container 
+{
   width: 100%;
   padding: 15px;
   font-weight: bold;
@@ -37,13 +46,15 @@ body {
   position: relative;
 }
 
-.label {
+.label 
+{
   position: absolute;
   left: 35px;
   top: 30%;
 }
 
-.input {
+.input 
+{
   width: 220px;
   font-family: monospace;
   padding: 5px;
@@ -55,7 +66,8 @@ body {
   font-size: 18px;
 }
 
-.input::placeholder {
+.input::placeholder 
+{
   color: darkgray;
   text-transform: capitalize;
   font-size: 16px;
